Move count script
Signed-off-by: awesomelewis2007 <awesomelewis2007@users.noreply.github.com>

--- a/.github/workflows/count.yml
+++ b/.github/workflows/count.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: count
-        run: python3 count.py
+        run: python3 tools/count.py
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update readme searches count
