--- a/project.json
+++ b/project.json
@@ -3,9 +3,9 @@
     "description": "This is a list of prebuilt searches on Github.",
     "version": "",
     "main_file": "README.md",
-    "author": "Lewis Evans",
+    "author": "0x4248",
     "license": "GNU General Public License v3.0",
-    "url": "https://www.github.com/lewisevans2007/gh_search",
+    "url": "https://www.github.com/0x4248/gh_search",
     "email": "none",
     "languages": [
         "python"
